# robo-trot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: build_5m_manifest.py  dataset_writer.py  launch_5m_shards.py  record_teacher_demos.py
docs/: learnings.md
envs/: __init__.py  a1_teacher_env.py
robo_trot/: __init__.py  kinematics.py
robo_trot/data_pipeline/: __init__.py  dataset_writer.py  inspection.py  manifest.py  record_teacher_demos.py  sharded_generation.py  validation.py
robo_trot/demos/: __init__.py  dataset_writer.py  inspection.py  manifest.py  record_teacher_demos.py  sharded_generation.py  validation.py
robo_trot/policies/: __init__.py  action_adapter.py  base.py  mlp_policy.py  probe_policy.py  random_policy.py  txl_policy.py
robo_trot/robot/: __init__.py  a1.py  kinematics.py  model_info.py
robo_trot/sim/: __init__.py  a1_teacher_env.py
scripts/: __init__.py  audit_action_mapping.py  fetch_menagerie_a1.py  inspect_a1_model.py  inspect_dataset.py  play_random_policy.py  play_teacher.py  sanity_check_random_policy.py  sanity_check_teacher.py  validate_dataset.py
teachers/: __init__.py  base.py  footspace_cpg_ik_teacher.py
tests/: test_5m_manifest.py  test_5m_shards.py  test_action_mapping_audit.py  test_bc_training.py  test_command_sampler.py  test_dataset_writer.py  test_docstring_coverage.py  test_model_info.py  test_obs.py  test_package_boundaries.py  test_play_teacher.py  test_policy_interface.py  test_random_policy_rollout.py  test_sanity_check_teacher.py  test_script_layout.py  test_teacher.py  test_validate_dataset.py
(+35 files in other folders)
