[project]
name = "robo-trot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "mujoco>=3.2.0",
  "numpy>=1.24",
  "imageio>=2.31",
  "pillow>=10.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["robo_trot*", "data*"]
exclude = ["assets*", "scripts*", "tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
